--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,12 +10,7 @@ include mixins/home/landing/CrispySandwiches
 include mixins/home/landing/FriedChicken
 include mixins/home/landing/SpicyPizza
 include mixins/home/landing/CtaOne
-include mixins/home/landing/Collection
-include mixins/home/landing/BestSellers
-include mixins/home/landing/Summer
-include mixins/home/landing/GentleFormalLooks
-include mixins/home/landing/Blog
-include mixins/home/landing/cta
+include mixins/home/landing/CtaTwo
 include mixins/home/landing/Footer
 
 
@@ -36,14 +31,5 @@ append content
   +CrispySandwiches
   +FriedChicken
   +SpicyPizza
-
-  //- +ExclusiveCollection
-  //- +NewArrivals
-  //- +ShopCategory
-  //- +Collection
-  //- +BestSellers
-  //- +Summer
-  //- +GentleFormalLooks
-  //- +Blog
-  //- +Cta
-  //- +Footer
+  +CtaTwo
+  +Footer
