--- a/src/pug/mixins/home/landing/Discount.pug
+++ b/src/pug/mixins/home/landing/Discount.pug
@@ -40,7 +40,7 @@ mixin Discounts(config)
       .position-relative    
         img.img-fluid.rounded-3.w-100(src=`${CWD}assets/img/gallery/${config.image}` alt='...')
         .card-actions
-          span.badge.badge-foodwagon.bg-primary.p-4
+          .badge.badge-foodwagon.bg-primary.p-4
             .d-flex.justify-content-between.align-items-center
               .text-white.fs-6!=config.discount
               .text-white.fs-1!=config.percentage  
