--- a/src/pug/mixins/home/landing/FriedChicken.pug
+++ b/src/pug/mixins/home/landing/FriedChicken.pug
@@ -3,7 +3,7 @@ append variables
     var chicken = [
       {
         image:'fried-chicken.png',
-        rounded:'rounded-start',
+        rounded:'rounded-top rounded-md-top-0 rounded-md-left',
         order: 'order-md-0',
         title:'Celebrate  parties with  <span class="text-primary">Fried Chicken</span>',
         text:'Get the best fried chicken smeared with a lip smacking lemon chili flavor. Check out best deals for fried chicken.'
