--- a/src/pug/mixins/home/landing/SpicyPizza.pug
+++ b/src/pug/mixins/home/landing/SpicyPizza.pug
@@ -3,9 +3,9 @@ append variables
     var pizza = [
       {
         image:'pizza.png',
-        rounded:'rounded-end',
+        rounded:'rounded-top rounded-md-top-0 rounded-md-right',
         order: 'order-0 order-md-1',
-        title:'Wanna eat hot & spicy <span class="text-primary">Pizza?</span>',
+        title:'Wanna eat hot &  <span class="text-primary">spicy Pizza?</span>',
         text:'Pair up with a friend and enjoy the hot and crispy pizza pops. Try it with the best deals.'
       },
     ]
