--- a/src/scss/theme/_utilities.scss
+++ b/src/scss/theme/_utilities.scss
@@ -27,6 +27,7 @@ $utilities: map_merge(
     ),
     "font-weight": (
       property: font-weight,
+      class: fw,
       values: (
         thin: $font-weight-thin,
         lighter: $font-weight-lighter,
@@ -115,22 +116,22 @@ $utilities: map_merge(
         top-0: 0,
       ),
     ),
-    "border-right": (
+    "border-end": (
       property: border-right,
       responsive: true,
       class: border,
       values: (
-        right: $border-width solid $border-color,
-        right-0: 0,
+        end: $border-width solid $border-color,
+        end-0: 0,
       ),
     ),
-    "border-left": (
+    "border-start": (
       property: border-left,
       responsive: true,
       class: border,
       values: (
-        left: $border-width solid $border-color,
-        left-0: 0,
+        start: $border-width solid $border-color,
+        start-0: 0,
       ),
     ),
     "border-bottom": (
@@ -160,11 +161,6 @@ $utilities: map_merge(
         y-0: 0,
       ),
     ),
-    "border-color": (
-      property: border-color,
-      class: border,
-      values: $theme-all-colors,
-    ),
     "border-dashed": (
       responsive: true,
       property: border,
@@ -181,20 +177,20 @@ $utilities: map_merge(
         dashed-top: $border-width dashed $border-color,
       ),
     ),
-    "border-dashed-right": (
+    "border-dashed-end": (
       responsive: true,
       property: border-right,
       class: border,
       values: (
-        dashed-right: $border-width dashed $border-color,
+        dashed-end: $border-width dashed $border-color,
       ),
     ),
-    "border-dashed-left": (
+    "border-dashed-start": (
       responsive: true,
       property: border-left,
       class: border,
       values: (
-        dashed-left: $border-width dashed $border-color,
+        dashed-start: $border-width dashed $border-color,
       ),
     ),
     "border-dashed-bottom": (
@@ -221,6 +217,12 @@ $utilities: map_merge(
         dashed-y: $border-width dashed $border-color,
       ),
     ),
+    "border-color": (
+      responsive: true,
+      property: border-color,
+      class: border,
+      values: $theme-all-colors,
+    ),
     "rounded-top": (
       responsive: true,
       property: border-top-left-radius border-top-right-radius,
@@ -231,14 +233,14 @@ $utilities: map_merge(
         top-0: 0,
       ),
     ),
-    "rounded-right": (
+    "rounded-end": (
       responsive: true,
       property: border-top-right-radius border-bottom-right-radius,
       class: rounded,
       values: (
-        right: $border-radius,
-        right-lg: $border-radius-lg,
-        right-0: 0,
+        end: $border-radius,
+        end-lg: $border-radius-lg,
+        end-0: 0,
       ),
     ),
     "rounded-bottom": (
@@ -251,14 +253,14 @@ $utilities: map_merge(
         bottom-0: 0,
       ),
     ),
-    "rounded-left": (
+    "rounded-start": (
       responsive: true,
       property: border-bottom-left-radius border-top-left-radius,
       class: rounded,
       values: (
-        left: $border-radius,
-        left-lg: $border-radius-lg,
-        left-0: 0,
+        start: $border-radius,
+        start-lg: $border-radius-lg,
+        start-0: 0,
       ),
     ),
     "rounded-0": (
@@ -276,7 +278,7 @@ $utilities: map_merge(
         map-merge(
           $theme-all-colors,
           (
-            "body": $body-bg,
+            "body": 'body',
             "white": $white,
             "transparent": transparent,
           )
