--- a/src/scss/theme/helpers/_shadow.scss
+++ b/src/scss/theme/helpers/_shadow.scss
@@ -22,5 +22,5 @@
 }
 
 .shadow-warning {
-  box-shadow: 0 0 4rem rgba($warning, 0.5)!important;
+  box-shadow: 0 0 3rem 0 rgba($warning, 0.3)!important;
 }
