--- a/src/pug/mixins/home/landing/Footer.pug
+++ b/src/pug/mixins/home/landing/Footer.pug
@@ -25,28 +25,28 @@ mixin Footer
           +FooterList('Columbus','New Mexico','Albuquerque','Sacramento','New Orleans')          
     hr.text-900    
     .row
-      .col-6.col-md-4.col-lg-3.mb-3
+      .col-6.col-md-4.col-lg-3.col-xxl-2.mb-3
         h5.lh-lg.fw-bold.text-white COMPANY
         ul.list-unstyled.mb-md-4.mb-lg-0
           +FooterList('About Us','Team','Careers','blog')
          
-      .col-6.col-md-4.col-lg-3.mb-3
+      .col-6.col-md-4.col-lg-3.col-xxl-2.col-lg-3.mb-3
         h5.lh-lg.fw-bold.text-white CONTACT
         ul.list-unstyled.mb-md-4.mb-lg-0
           +FooterList('Help & Support','Partner with us ','Ride with us','Ride with us')
 
-      .col-6.col-md-4.col-lg-3.mb-3
+      .col-6.col-md-4.col-lg-3.col-xxl-2.mb-3
         h5.lh-lg.fw-bold.text-white LEGAL
         ul.list-unstyled.mb-md-4.mb-lg-0
           +FooterList('Terms & Conditions','Refund & Cancellation','Privacy Policy','Cookie Policy')
 
-      .col-6.col-md-4.col-lg-3.mb-3
+      .col-6.col-md-4.col-lg-3.col-xxl-2.mb-3
         h5.lh-lg.fw-bold.text-white LEGAL
         ul.list-unstyled.mb-md-4.mb-lg-0
           +FooterList('Terms & Conditions','Refund & Cancellation','Privacy Policy')
     
 
-      .col-12.col-md-8.col-lg-6
+      .col-12.col-md-8.col-lg-6.col-xxl-4
         h5.lh-lg.fw-bold.text-500 FOLLOW US
         .text-start.my-3 
           a(href='#!')
