--- a/src/pug/mixins/home/landing/PopularItems.pug
+++ b/src/pug/mixins/home/landing/PopularItems.pug
@@ -57,28 +57,28 @@ mixin PopularItems
         #carouselPopularItems.carousel.slide(data-bs-touch="false" data-bs-interval="false")
           .carousel-inner
             .carousel-item.active(data-bs-interval='10000')
-              .row.h-100.align-items-center            
+              .row.gx-3.h-100.align-items-center            
                 +PopularItem(pItems[0])                                                                    
                 +PopularItem(pItems[1])                                                                    
                 +PopularItem(pItems[2])                                                                    
                 +PopularItem(pItems[3])                                                                    
                 +PopularItem(pItems[4])                                                                    
             .carousel-item(data-bs-interval='5000')
-              .row.h-100.align-items-center             
+              .row.gx-3.h-100.align-items-center             
                 +PopularItem(pItems[0])                                                                    
                 +PopularItem(pItems[1])                                                                    
                 +PopularItem(pItems[2])
                 +PopularItem(pItems[3])                     
                 +PopularItem(pItems[4])                     
             .carousel-item(data-bs-interval='3000')
-              .row.h-100.align-items-center                                 
+              .row.gx-3.h-100.align-items-center                                 
                 +PopularItem(pItems[0])                                                                    
                 +PopularItem(pItems[1])                                                                    
                 +PopularItem(pItems[2])
                 +PopularItem(pItems[3])                       
                 +PopularItem(pItems[4])                       
             .carousel-item
-              .row.h-100.align-items-center      
+              .row.gx-3.h-100.align-items-center      
                 +PopularItem(pItems[0])                                                                    
                 +PopularItem(pItems[1])                                                                    
                 +PopularItem(pItems[2]) 
