--- a/src/pug/mixins/navbars/NavbarFoodwagon.pug
+++ b/src/pug/mixins/navbars/NavbarFoodwagon.pug
@@ -15,7 +15,7 @@ mixin NavbarFoodwagon
         form.d-flex.mt-4.mt-lg-0.ms-lg-auto.ms-xl-0
           .input-group-icon.pe-2
             i.fas.fa-search.input-box-icon.text-primary
-            input.form-control.border-0.input-box(type='search' placeholder='Search Food' aria-label='Search')
+            input.form-control.border-0.input-box.bg-100(type='search' placeholder='Search Food' aria-label='Search')
           button.btn.btn-white.shadow-warning.text-warning(type='submit') 
             i.fas.fa-user.me-2
             | Login
