--- a/src/pug/mixins/home/landing/Discount.pug
+++ b/src/pug/mixins/home/landing/Discount.pug
@@ -41,12 +41,14 @@ mixin Discounts(config)
         img.img-fluid.rounded-3.w-100(src=`${CWD}assets/img/gallery/${config.image}` alt='...')
         .card-actions
           .badge.badge-foodwagon.bg-primary.p-4
-            .d-flex.justify-content-between.align-items-center
-              .text-white.fs-6!=config.discount
-              .text-white.fs-1!=config.percentage  
+            .d-flex.flex-between-center
+              .text-white.fs-7!=config.discount
+              span.text-white.fs-2 %  
+                br
+                .fw-normal.fs-1.mt-2 Off
       .card-body.px-0
         h5.fw-bold.text-1000.text-truncate=config.title 
-        span.badge.bg-soft-primary.py-2.px-3
+        span.badge.bg-soft-danger.py-2.px-3
           span.fs-1.text-danger=config.days 
       a.stretched-link(href='#')
     
