--- a/src/pug/mixins/home/landing/Footer.pug
+++ b/src/pug/mixins/home/landing/Footer.pug
@@ -69,15 +69,15 @@ mixin Footer
             button.btn.btn-primary(type='submit') Subscribe
     
     hr.border.border-800
-    .row.flex-center.my-3
+    .row.flex-center.pb-3
       .col-md-6.order-0 
-        p.my-2.text-200.text-center.text-md-start All rights Reserved &copy;  Your Company, 2021
+        p.text-200.text-center.text-md-start All rights Reserved &copy;  Your Company, 2021
       .col-md-6.order-1
-        p.my-2.text-200.text-center.text-md-end  Made with&nbsp;
+        p.text-200.text-center.text-md-end  Made with&nbsp;
           svg.bi.bi-suit-heart-fill(xmlns='http://www.w3.org/2000/svg' width='15' height='15' fill='#FFB30E' viewBox='0 0 16 16')
             path(d='M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z')
 
           |&nbsp;by&nbsp;
-          a(href='https://themewagon.com/' target='_blank').text-200 ThemeWagon 
+          a(href='https://themewagon.com/' target='_blank').text-200.fw-bold ThemeWagon 
    
      
