--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -7,8 +7,8 @@ mixin HeroHeader
             img.img-fluid(src=`${CWD}assets/img/gallery/hero-header.png`   alt='hero-header')
   
         .col-md-7.col-lg-6.py-8.text-md-start.text-center
-          h1.display-1.fs-md-5.fs-lg-6.text-light Are you starving?
-          h1.text-800.mb-5 Within a few clicks, find meals that
+          h1.display-1.fs-md-5.fs-lg-6.fs-xl-8.text-light Are you starving?
+          h1.text-800.mb-5.fs-4 Within a few clicks, find meals that
             br.d-none.d-xxl-block
             |are accessible near you
           .card.w-xxl-75
@@ -23,12 +23,12 @@ mixin HeroHeader
                     | Pickup
               .tab-content.mt-3#nav-tabContent
                 .tab-pane.fade.show.active#nav-home(role='tabpanel' aria-labelledby='nav-home-tab')
-                  form.row.gx-4.gy-2.align-items-center
+                  form.row.gx-2.gy-2.align-items-center
                     .col
                       .input-group-icon
                         i.fas.fa-map-marker-alt.text-danger.input-box-icon
                         label.visually-hidden(for='inputDelivery') Address
-                        input.form-control#inputDelivery.input-box(type='text' placeholder='Enter Your Address')
+                        input.form-control#inputDelivery.input-box.form-foodwagon-control(type='text' placeholder='Enter Your Address')
                     .d-grid.gap-3.col-sm-auto
                       button.btn.btn-danger(type='submit') Find Food
                 .tab-pane.fade#nav-profile(role='tabpanel' aria-labelledby='nav-profile-tab') 
@@ -37,7 +37,7 @@ mixin HeroHeader
                       .input-group-icon
                         i.fas.fa-map-marker-alt.text-danger.input-box-icon
                         label.visually-hidden(for='inputPickup') Address
-                        input.form-control#inputPickup.input-box(type='text' placeholder='Enter Your Address')
+                        input.form-control#inputPickup.input-box.form-foodwagon-control(type='text' placeholder='Enter Your Address')
                     .d-grid.gap-3.col-sm-auto
                       button.btn.btn-danger(type='submit') Find Food
                           
