--- a/src/pug/mixins/home/landing/Discount.pug
+++ b/src/pug/mixins/home/landing/Discount.pug
@@ -43,7 +43,7 @@ mixin Discounts(config)
           .badge.badge-foodwagon.bg-primary.p-4
             .d-flex.flex-between-center
               .text-white.fs-7!=config.discount
-              span.text-white.fs-2 %  
+              .d-block.text-white.fs-2 %  
                 br
                 .fw-normal.fs-1.mt-2 Off
       .card-body.px-0
